<package format="3">
    <name>ros2_workspace</name>
    <version>0.0.1</version>
<build_depend>protobuf</build_depend>
<buildtool_depend>ament_cmake</buildtool_depend>
<depend>rclcpp</depend>
<exec_depend>protobuf</exec_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>